--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "nodemon": "^1.17.2",
     "pg-promise": "^8.2.2",
     "request": "^2.85.0",
+    "session-file-store": "^1.2.0",
     "spotify-web-api-node": "^3.0.0"
+  },
+  "nodemonConfig": {
+    "ignore": ["sessions"]
   }
 }
